Styles for both editor and front-end

--- a/src/spoiler/spoiler.editor.scss
+++ b/src/spoiler/spoiler.editor.scss
@@ -1,4 +1,13 @@
-.wp-block-scbc-spoiler {}
+@import "../scss/variables";
+@import "common";
 
+.wp-block-scbc-spoiler {
+	@extend %shared;
 
+	position: relative;
+	border: 2px dashed $background-color;
 
+	.is-selected {
+		background-color: map-get( $colors, gray-200 );
+	}
+}
