--- a/src/spoiler/_common.scss
+++ b/src/spoiler/_common.scss
@@ -8,14 +8,15 @@
 		position: absolute;
 		top: 0;
 		right: 0;
-		height: auto;
-		width: auto;
+		height: 45px;
+		width: 130px;
 		appearance: none;
 		background-color: map-get( $colors, gray-200 );
 		border: 0;
 		margin: 0;
 		padding: ( $base-spacing / 2 );
 		z-index: 10;
+		transition: height 200ms ease, width 200ms ease;
 
 		&.is-revealed {
 			height: 100%;
