Toggle ARIA attributes

--- a/src/spoiler/_common.scss
+++ b/src/spoiler/_common.scss
@@ -34,4 +34,12 @@
 		text-transform: uppercase;
 		letter-spacing: 2px;
 	}
+
+	&__wrapper {
+		display: none;
+
+		&.is-revealed {
+			display: block;
+		}
+	}
 }
